refactor: remove unused import